[package]
name = "slack-emoji-darkmode-shader"
version = "0.1.0"
authors = ["pione30 <g.pionelish30@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "slack-emoji-darkmode-shader"
repository = "https://github.com/pione30/slack-emoji-darkmode-shader"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["slack", "emoji", "imagemagick"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

indicatif = "0.14"
regex = "1"

magickwand = { path = "./magickwand" }

[workspace]
members = [
    "magickwand-bindgen",
    "magickwand"
]
