[package]
name = "sledash-magickwand-bindgen"
version = "0.1.0"
authors = ["pione30 <g.pionelish30@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "FFI of MagickWand"
repository = "https://github.com/pione30/sledash"
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.53.1"
pkg-config = "0.3.17"
