[package]
name = "sledash-magickwand"
version = "0.1.0"
authors = ["pione30 <g.pionelish30@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "wrapper abstraction of sledash-magickwand-bindgen"
repository = "https://github.com/pione30/sledash"
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

sledash-magickwand-bindgen = { path = "../sledash-magickwand-bindgen", version = "0.1.0" }
